--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -25,12 +25,16 @@ single: true
     </p>
   </footer>
 </article>
-{% if site.duoshuo_show_comment_count==true %}
-<section imagesd="comment">
-<h1>Comments</h1>
-{% include post/duoshuo.html %}
-</section>
+
+{% if site.duoshuo_comments==true%}
+  <section  imagesd="comment">
+    <h1>Comments</h1>
+    <div>{% include post/duoshuo.html %}</div>
+  </section>
 {% endif %}
+
+
+
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
